# ros2_with_kuka

./: .gitignore
src/: move_kr3r540_b_trajectory.py  move_kr3r540_c_trajectory.py  move_kr3r540_web_gui.py  move_kr3r540_web_gui_kdl.py  simulation_guide.md
src/kr3_viewer/: CMakeLists.txt  move_kr3r540_trajectory.py  move_kr3r540_trajectory_2.py  package.xml
src/kr3_viewer/urdf/: kr3r540.urdf  kr3r540.xacro  kr3r540_macro.xacro
src/kuka-external-control-sdk/kuka_external_control_sdk/iiqka/src/: robot.cc
src/kuka-external-control-sdk/kuka_external_control_sdk/kss/src/: robot.cc
src/kuka-external-control-sdk/kuka_external_control_sdk/kss/src/eki/: robot_interface.cc
src/kuka-external-control-sdk/kuka_external_control_sdk/kss/src/mxa/: client.cc
src/kuka-external-control-sdk/kuka_external_control_sdk/kss/src/rsi/: robot_interface.cc
src/kuka_kr3r540/: CMakeLists.txt  migration_guide.md  package.xml
src/kuka_kr3r540/config/: joint_names_kuka_kr3r540.yaml
src/kuka_kr3r540/launch/: display.launch.py  gazebo.launch.py
src/kuka_kr3r540/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
src/kuka_kr3r540/urdf/: frames_2026-06-26_19.16.31.gv  kuka_kr3r540.csv  kuka_kr3r540.urdf
src/kuka_robot_descriptions/kuka_agilus_support/: move_robot_trajectory.py
src/kuka_robot_descriptions/kuka_agilus_support/urdf/: kr4_r600.urdf
src/kuka_robot_descriptions/kuka_lbr_iiwa_moveit_config/launch/: moveit_planning_fake_hardware.launch.py
src/web/: index.html
(+4 files in other folders)
