<?xml version="1.0"?>
<?model_type xml?>
<package format="3">
  <name>kuka_kr3r540</name>
  <version>1.0.0</version>
  <description>URDF Description package for kuka_kr3r540 converted to ROS 2</description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend> <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>